<resources>
    <string name="app_name">Restaurant_advisor</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_page">change page</string>
    <string name="find_restaurant">find restaurant</string>
    <string name="textview">TextView</string>
    <string name="connect">Connect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="guest">guest</string>
    <string name="register">register</string>
    <string name="title_activity_registeur">Registeur</string>
    <string name="firstname">firstname</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="age">age</string>
    <string name="confirme_password">confirme password</string>
    <string name="password">password</string>
    <string name="name1">name</string>
    <string name="title_activity_add_new_restaurant">addNewRestaurant</string>
    <string name="restaurantName">name</string>
    <string name="description1">description</string>
    <string name="grade1">grade</string>
    <string name="localization">localization</string>
    <string name="phone_number">phone number</string>
    <string name="website">website</string>
    <string name="hours">hours</string>
    <string name="add_restaurant">add restaurant</string>
    <string name="add_new_restaurant">add new restaurant</string>
    <string name="add_new_menu">add new menu</string>
    <string name="delete_restaurant">delete restaurant</string>
    <string name="update_restaurant">update Restaurant</string>
    <string name="name2">name</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="add_menu">add menu</string>
    <string name="name">name</string>
    <string name="grade">grade</string>
    <string name="disconnection">disconnection</string>
</resources>